! Fixed select box glitch where long optgroups would sometimes generate an extra 15px whitespace on the right side. (sbox.js) ! Fixed select box glitch where the display area's width after selecting an item would be calculated incorrectly if display used different styles compared to the dropdown. (sbox.js) ! And a third select box bug fix I forgot to commit... Whatever that was, it was annoying. (index.css) @ The first two fixes basically use the same technique (setting width to auto), and cost an extra 21 bytes. Well, at least it's still under 2600... Hello? Is anyone listening? Oh, I should have guessed... The rascals. Tomorrow's lottery numbers will be 3, 12, 21, 42 and... Oh, now everyone is listening uh? I'm telling you. Rascals.

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -403,7 +403,8 @@ select.sb
 	text-align: left
 	margin: 1px
 
-	.text
+	.text extends .inline-block
+		vertical-align: baseline
 		white-space: nowrap
 
 	.details
@@ -428,8 +429,7 @@ select.sb
 		padding: 2px 22px 2px 2px
 		border-radius: 6px
 
-		.text extends .inline-block
-			vertical-align: baseline
+		.text
 			padding: 0 3px
 
 		.btn
@@ -504,7 +504,7 @@ select.sb
 
 		// <optgroup> styles
 		.optgroup .label
-			gradient: #fff, darken(#fff, 5%)
+			gradient: #fff, #e5eeee
 			color: #666
 			cursor: default
 			font-weight: bold
